fixed image modal alignment

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -1,6 +1,7 @@
 .modal {
   position: fixed;
   justify-content: center;
+  align-items: center;
   top: 0;
   left: 0;
   right: 0;
@@ -157,14 +158,13 @@
   .modal__container_type_image {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    top: 0 !important;
     background-color: transparent;
     box-shadow: none;
     width: auto;
     height: auto;
     max-width: 75vw;
     max-height: 85vh;
-    /* position: relative; */
     margin: auto;
   }
   
